--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/bit2007am/mysql-connector-java-5.1.38.jar"/>
 	<classpathentry kind="lib" path="C:/bit2007am/poi-3.16.jar"/>
+	<classpathentry kind="lib" path="C:/bit2007am/itext-2.1.7 (1).jar"/>
+	<classpathentry kind="lib" path="C:/bit2007am/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/bit2007am/jericho-html-3.2.jar"/>
+	<classpathentry kind="lib" path="C:/bit2007am/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
